--- a/Project.toml
+++ b/Project.toml
@@ -8,8 +8,17 @@ CompositeStructs = "534720e6-2374-40c5-8712-bf9a2f1643c6"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 ExtendableGrids = "cfc395e8-590f-11e8-1f13-43a2532b2fa8"
+GridVisualize = "5eed8a63-0fb0-45eb-886d-8d5a387d12b8"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 ModelParameters = "4744a3fa-6c31-4707-899e-a3298e4618ad"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+Parquet = "626c502c-15b0-58ad-a749-f091afb673ae"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+PlutoLinks = "0ff47ea0-7a50-410d-8455-4348d5de0420"
+PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
+PlutoVista = "646e1f28-b900-46d7-9d87-d554eb38a413"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 VoronoiFVM = "82b139dc-5afc-11e9-35da-9b9bdfd336f3"
 
 [compat]
