--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 ExtendableGrids = "cfc395e8-590f-11e8-1f13-43a2532b2fa8"
 GridVisualize = "5eed8a63-0fb0-45eb-886d-8d5a387d12b8"
+IEC_const = "4be2cf16-ed9d-4586-84a2-55065cdeea4b"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 ModelParameters = "4744a3fa-6c31-4707-899e-a3298e4618ad"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
