--- a/Project.toml
+++ b/Project.toml
@@ -25,10 +25,9 @@ VoronoiFVM = "82b139dc-5afc-11e9-35da-9b9bdfd336f3"
 CompositeStructs = "0.1"
 DataFrames = "1"
 DocStringExtensions = "0.9"
-ExtendableGrids = "0.9"
 ModelParameters = "0.3"
-VoronoiFVM = "0.18"
-julia = "1.8"
+VoronoiFVM = "=1.6.0"
+julia = "^1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
